# beamed

./: .gitignore  Cargo.toml  README.md  release.md
.github/workflows/: ci.yaml  release.yaml.bak
assets/shaders/: beam_material.wgsl
src/: debug.rs  game.rs  main.rs  menu.rs  render.rs
